# Url-shortener

./: pyproject.toml
app/: config.py  main.py
app/api/: internal_router.py
app/api/endpoints/: url_shortener.py
app/utils/: shortenurl.py
