[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = "shortens the url"
authors = ["NIKHIL KUMAR REDDY <nikhilkumar.m@skil.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.111.1"}
SQLAlchemy = "^2.0.31"
validators = "^0.33.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
